--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "browser-sync": "^3.0.4",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^4.1.0",
@@ -10,6 +11,7 @@
   "devDependencies": {
     "gulp": "^5.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-file-include": "^2.3.0",
     "gulp-sass": "^6.0.1",
     "sass": "^1.94.2"
   }
